test/float.c
// test unsigned float
float a = 0.7;
float b = 12.43;
float c = 9.00;
float d = .1;       // error
float e = 1.;       // error
float f = 01.23E12;
float g = 43.e-4;
float h = .5E03;
float i = 1.05e-4;
float j = 1.05e;    // error